[gd_scene load_steps=9 format=3 uid="uid://cqf04a5askign"]

[ext_resource type="Script" path="res://Prefabs/UI/ControlLayouts.gd" id="1_3npt2"]
[ext_resource type="Texture2D" uid="uid://krydov5ff1hs" path="res://Sprites/UI/controller_1_v2.png" id="2_cyfav"]
[ext_resource type="PackedScene" uid="uid://c7qir2gplg7jc" path="res://Prefabs/UI/AnimatedButtons.tscn" id="15_y3dc5"]
[ext_resource type="FontFile" uid="uid://7btu78ff8nvs" path="res://Fonts/monkey.ttf" id="26_qkvn0"]
[ext_resource type="Texture2D" uid="uid://bwj0i55f83a43" path="res://Sprites/UI/smupAssets/SideArrow_normal.png" id="29_g2jl2"]
[ext_resource type="Texture2D" uid="uid://chbw4xbjtgd6g" path="res://Sprites/UI/smupAssets/SideArrow_pressed.png" id="30_nskjb"]
[ext_resource type="Texture2D" uid="uid://s8r6pi5nubyy" path="res://Sprites/UI/smupAssets/SideArrow_hover.png" id="31_2ajqt"]
[ext_resource type="AudioStream" uid="uid://dll5gecslffys" path="res://Sounds/UI/sfx_UI_Select_A.wav" id="32_7t4r5"]

[node name="ControlLayouts" type="CanvasLayer"]
process_mode = 3
layer = 11
script = ExtResource("1_3npt2")

[node name="ColorRect" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -13.0
offset_top = -8.0
offset_right = 7.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 1)

[node name="GamepadControls" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 256.0
offset_top = 181.0
offset_right = 256.0
offset_bottom = 181.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.5, 0.5)

[node name="Controller3" type="Sprite2D" parent="GamepadControls"]
modulate = Color(1, 1, 1, 0.156863)
position = Vector2(473, 289)
scale = Vector2(0.25, 0.25)
texture = ExtResource("2_cyfav")

[node name="Move" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(326, 211)
scale = Vector2(5, 5)
animation = &"gp_Stick"

[node name="Move2" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(548, 304)
scale = Vector2(5, 5)
animation = &"gp_Stick"

[node name="LT" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(319, 93)
scale = Vector2(3, 3)
animation = &"gp_TriggerL"
speed_scale = 0.0

[node name="RT" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(617, 92)
scale = Vector2(3, 3)
animation = &"gp_TriggerR"
speed_scale = 0.0

[node name="Start" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(513, 215)
scale = Vector2(3, 3)
animation = &"gp_Start"
speed_scale = 0.0

[node name="A" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(623, 251)
scale = Vector2(3, 3)
animation = &"gp_A"

[node name="B" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(662, 213)
scale = Vector2(3, 3)
animation = &"gp_B"

[node name="X" parent="GamepadControls" instance=ExtResource("15_y3dc5")]
position = Vector2(584, 212)
scale = Vector2(3, 3)
animation = &"gp_X"

[node name="WSAD" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 129.0
offset_top = 188.0
offset_right = 273.0
offset_bottom = 230.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Movement"

[node name="WSAD2" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 498.0
offset_top = 356.0
offset_right = 642.0
offset_bottom = 398.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Camera"

[node name="Start2" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 432.0
offset_top = 236.0
offset_right = 576.0
offset_bottom = 278.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Pause"

[node name="Kick" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 532.0
offset_top = 136.0
offset_right = 676.0
offset_bottom = 178.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Punch"

[node name="Kick2" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 664.0
offset_top = 68.0
offset_right = 862.0
offset_bottom = 110.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Shoot Ice Cream"

[node name="Jump" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 615.0
offset_top = 277.0
offset_right = 759.0
offset_bottom = 319.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Jump / Hover"

[node name="Grab2" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 188.0
offset_top = 60.0
offset_right = 332.0
offset_bottom = 102.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Boost
"

[node name="Cancel" type="Label" parent="GamepadControls"]
layout_mode = 0
offset_left = 699.0
offset_top = 195.0
offset_right = 843.0
offset_bottom = 237.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Cancel"

[node name="MouseKeyboardControls" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0
offset_left = 134.0
offset_top = 185.0
offset_right = 751.0
offset_bottom = 698.0
scale = Vector2(0.75, 0.75)

[node name="WSAD" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 42.0
offset_top = 128.0
offset_right = 186.0
offset_bottom = 170.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Movement"

[node name="WSAD2" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 184.0
offset_top = 282.667
offset_right = 328.0
offset_bottom = 324.667
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Boost"

[node name="Esc" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 2.0
offset_top = 48.0
offset_right = 182.0
offset_bottom = 90.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Pause Menu
"

[node name="Grab2" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 927.0
offset_top = 243.0
offset_right = 1107.0
offset_bottom = 285.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Camera
"

[node name="Kick" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 377.333
offset_top = 233.333
offset_right = 557.333
offset_bottom = 275.333
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Punch"

[node name="Kick2" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 789.333
offset_top = 133.333
offset_right = 969.333
offset_bottom = 175.333
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Ice Cream
"

[node name="Kick3" type="Label" parent="MouseKeyboardControls"]
layout_mode = 0
offset_left = 549.333
offset_top = 96.0
offset_right = 765.333
offset_bottom = 138.0
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 48
text = "Jump / Hover"
horizontal_alignment = 1

[node name="Line2D4" type="Line2D" parent="MouseKeyboardControls"]
position = Vector2(3, -111)
points = PackedVector2Array(205, 262, 251, 262, 251, 234, 295, 234, 295, 192, 340, 192, 340, 234, 386, 234, 386, 277, 251, 277, 251, 262)
width = 2.0
default_color = Color(1, 1, 1, 0.596078)

[node name="Line2D5" type="Line2D" parent="MouseKeyboardControls"]
position = Vector2(3, -111)
points = PackedVector2Array(638, 335, 638, 246)
width = 2.0
default_color = Color(1, 1, 1, 0.596078)

[node name="KB_ESC" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(235, 71)
scale = Vector2(3, 3)
animation = &"Esc"
speed_scale = 0.0

[node name="KB_S" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(321.953, 145.962)
scale = Vector2(3, 3)
animation = &"S"

[node name="KB_W" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(321.953, 105.568)
scale = Vector2(3, 3)
animation = &"W"

[node name="KB_A" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(278.293, 145.962)
scale = Vector2(3, 3)
animation = &"A"

[node name="KB_D" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(367.036, 145.962)
scale = Vector2(3, 3)
animation = &"D"

[node name="KB_C" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(418, 207)
scale = Vector2(3, 3)
animation = &"c"
speed_scale = 0.0

[node name="MouseL" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(856, 205)
scale = Vector2(3, 3)
animation = &"mouse_L"

[node name="ShiftL" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(208, 245.333)
scale = Vector2(3, 3)
animation = &"shift_l"

[node name="R" parent="MouseKeyboardControls/ShiftL" instance=ExtResource("15_y3dc5")]
position = Vector2(16, 0)
animation = &"shift_r"

[node name="MouseR" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(934, 206)
scale = Vector2(3, 3)
animation = &"mouse_r"

[node name="Space" parent="MouseKeyboardControls" instance=ExtResource("15_y3dc5")]
position = Vector2(651, 257)
scale = Vector2(3, 3)
animation = &"SpaceM"

[node name="spc_l" parent="MouseKeyboardControls/Space" instance=ExtResource("15_y3dc5")]
position = Vector2(-16, 5.06639e-06)
animation = &"SpaceL"

[node name="spc_l2" parent="MouseKeyboardControls/Space" instance=ExtResource("15_y3dc5")]
position = Vector2(16.0001, 5.06639e-06)
animation = &"SpaceR"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 72
text = "DEFAULT CONTROL LAYOUTS"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 16
alignment = 1

[node name="Control2" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Prev" type="TextureButton" parent="VBoxContainer/HBoxContainer2/Control2"]
layout_mode = 0
offset_left = -29.0
offset_top = -2.0
offset_right = 35.0
offset_bottom = 62.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("29_g2jl2")
texture_pressed = ExtResource("30_nskjb")
texture_hover = ExtResource("31_2ajqt")
texture_focused = ExtResource("31_2ajqt")

[node name="Label" type="Label" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("26_qkvn0")
theme_override_font_sizes/font_size = 64
text = " Gamepad"
horizontal_alignment = 1

[node name="Control" type="Control" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Next" type="TextureButton" parent="VBoxContainer/HBoxContainer2/Control"]
layout_mode = 0
offset_left = 2.00006
offset_top = -2.0
offset_right = 66.0001
offset_bottom = 62.0
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = ExtResource("29_g2jl2")
texture_pressed = ExtResource("30_nskjb")
texture_hover = ExtResource("31_2ajqt")
texture_focused = ExtResource("31_2ajqt")
flip_h = true

[node name="sfxlayoutchange" type="AudioStreamPlayer" parent="."]
stream = ExtResource("32_7t4r5")

[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Control2/Prev" to="." method="next_layout" binds= [-1]]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Control/Next" to="." method="next_layout" binds= [1]]
